[gd_scene load_steps=5 format=3 uid="uid://ofa8h3ftn3pv"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="Theme" path="res://resources/styling.theme" id="2"]
[ext_resource type="PackedScene" path="res://scenes/UIButton.tscn" id="6"]

[sub_resource type="Theme" id="Theme_halr1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="ColorRect" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme_halr1")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_halr1")
theme_override_constants/separation = 4

[node name="Content" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = SubResource("Theme_halr1")
bbcode_enabled = true

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_halr1")

[node name="StateButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_halr1")
alignment = 2

[node name="SaveButton" parent="MarginContainer/VBoxContainer/StateButtons" instance=ExtResource("6")]
layout_mode = 2
theme = SubResource("Theme_halr1")
text = "Save"

[node name="LoadButton" parent="MarginContainer/VBoxContainer/StateButtons" instance=ExtResource("6")]
layout_mode = 2
theme = SubResource("Theme_halr1")
text = "Load"

[node name="RestartButton" parent="MarginContainer/VBoxContainer/StateButtons" instance=ExtResource("6")]
layout_mode = 2
theme = SubResource("Theme_halr1")

[node name="QuitButton" parent="MarginContainer/VBoxContainer/StateButtons" instance=ExtResource("6")]
layout_mode = 2
theme = SubResource("Theme_halr1")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StateButtons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StateButtons/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StateButtons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StateButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
